--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,16 @@
-<div id="arena">
+<div id="world">
+</div>
+<div>
+  <form id="game_info">
+    <div class="form-group">
+      <input id="tiger" class="form-control" name="tiger" placeholder="Tigers">
+    </div>
+    <div class="form-group">
+      <input id="deer" class="form-control" name="deer" placeholder="Deer">
+    </div>
+    <div class="form-group">
+      <input id="tree" class="form-control" name="tree" placeholder="Trees">
+    </div>
+    <input type="button" value="Go!" class="btn btn-default">
+  </form>
 </div>
