--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,3 +14,8 @@
     <input type="button" value="Go!" class="btn btn-default">
   </form>
 </div>
+<div class="hidden_form">
+  <form id="score_game" action="/game" method="POST">
+  <input id="user_id" name="user_id" value="<%= @user.id if @user %>" />
+  </form>
+</div>
