--- a/app/views/user/login_signup.erb
+++ b/app/views/user/login_signup.erb
@@ -1,5 +1,5 @@
 <!-- sign in -->
-<div class="form-container">
+<div class="form-container centered_form">
   <% if flash[:sign_in_error]  %>
     <div class="error">
       <%= flash[:sign_in_error] %><br>
