--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,14 @@
 .hidden_form {
   display: none;
 }
+
+.container {
+  width: 700px;
+  margin: auto;
+}
+
+.centered_form, .small_centered {
+  width: 200px;
+  margin: auto;
+  margin-top: 30px;
+}
