add description for game play

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
+<h4>Make the ecosystem last as long as possible<br>by entering a starting number of deer and trees.</h4>
+
 <div id="world">
 </div>
 
