--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,13 @@
+h1, h2, h3, h4, h5 {
+  text-align: center;
+}
+
 .hidden_form {
   display: none;
 }
 
 .container {
-  width: 700px;
+  width: 600px;
   margin: auto;
 }
 
