--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,10 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+  <script src="/js/deer.js"></script>
+  <script src="/js/tree.js"></script>
   <script src="/js/game.js"></script>
+  
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
